Bug 489312 - Prefer usage of Integer.valueof instead of new() for org.eclipse.osgi
Change-Id: I8b1062796d0d1f49146d1d21876de2aab303ae2a
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>